# ai_critics

./: Cargo.toml  README.md  avg_iters_required.sh  avg_iters_required1.out
data/: iterations_3_critics.csv  iterations_general_critic.csv
problems/: coding_problem1.txt  coding_problem2.txt  coding_problem3.txt  coding_problem4.txt  coding_problem5.txt  coding_problem6.txt  coding_problem7.txt  coding_problem8.txt
src/: backtraces.rs  chatter_json.rs  coder.rs  compiler.rs  critic.rs  errors.rs  fixer.rs  main.rs  progress_bar.rs  tester.rs
