[package]
name = "ai_critics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.17.1"
futures = "0.3.29"
regex = "1.10.2"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.8.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
