[package]
name = "ai_critics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.17.1"
color-eyre = "0.6.2"
futures = "0.3.28"
indicatif = "0.17.4"
indoc = "2.0.4"
regex = "1.8.3"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
