[package]
name = "ai_critics"
version = "0.1.0"
edition = "2021"
default-run = "ai_critics"

[dependencies]
async-openai = "0.17.1"
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.28"
indicatif = "0.17.4"
indoc = "2.0.4"
log = "0.4.20"
plotters = "0.3.5"
polars = { version = "0.35.4", features = ["lazy"] }
pretty_env_logger = "0.5.0"
regex = "1.8.3"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
